Actions
Bug #13528
closedbnu: multiply-defined symbols
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol 'Dologin' is multiply-defined: (file cu.o type=OBJT; file conn.o type=OBJT); ld: fatal: file processing errors. No output written to cu ld: fatal: symbol 'Pk' is multiply-defined: (file pkdefs.o type=OBJT; file gio.o type=OBJT); ld: fatal: file processing errors. No output written to uucico collect2: error: ld returned 1 exit status *** Error code 1 dmake: Fatal error: Command failed for target `uucico' Current working directory /code/illumos-gate/usr/src/cmd/bnu
Testing done: build/install/boot
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 20af54a8dfd25497aa77acb3ad11cf1e91b122e9
commit 20af54a8dfd25497aa77acb3ad11cf1e91b122e9 Author: Toomas Soome <tsoome@me.com> Date: 2021-03-12T07:33:13.000Z 13528 bnu: multiply-defined symbols Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions